-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
None
-
Affects Version/s: 1.9.1
-
Component/s: None
-
None
-
Environment:Linux 64-bit
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Error occurs when reset is triggered while other shard data is being modified. See http://groups.google.com/group/mongodb-user/browse_thread/thread/b9ea6aa381684e22 and http://groups.google.com/group/mongodb-user/browse_thread/thread/5faaf4d7125152c0.