get copy of shard for reset, make safe for balancer thread - SERVER-3114